--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>My Personal Website</title>
+    <link rel="stylesheet" href="style.css" />
+      <title> My personal Website </title>
   </head>
   <body>
     <h1> testing</h1>
