add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title> My personal Website </title>
   </head>
   <body>
-    <h1> testing</h1>
+    <h1> hi testing</h1>
+    <script src="script.js"></script>
   </body>
 </html>
